# plugins-cpp

./: .clang-format  CMakeLists.txt
examples/: CMakeLists.txt
examples/transactional_composition/: CMakeLists.txt  main.cpp  plugin_apply_secret_model.cpp  plugin_calculate_feature_max.cpp  plugin_calculate_feature_min.cpp  plugin_interface.hpp  plugin_transform.cpp  plugin_validate.cpp  transactional_composition.ini
